--- a/solo-play/juo/chat/public/style.css
+++ b/solo-play/juo/chat/public/style.css
@@ -15,7 +15,58 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
-#container {
+.dialogBackground {
+    background-color: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.dialogContainer {
+    width: fit-content;
+    background-color: white;
+    border-width: 0;
+    border-radius: 0.5rem;
+    padding: 1rem;
+    display: inline-block;
+}
+
+.dialogPrompt {
+    font-weight: 600;
+    margin: 0;
+}
+
+.dialogInput {
+    font-size: medium;
+    padding: 0.5rem 0 0.5rem 0;
+    width: 100%;
+    border-width: 0 0 1px 0;
+    border-color: black;
+    outline: none;
+    margin: 0.5rem 0 3rem 0
+}
+
+.confirmButton {
+    color: black;
+    font-size: 1rem;
+    background-color: rgb(249, 230, 52);
+    width: 100%;
+    padding: 0.5rem;
+    border: 1px solid rgb(234, 216, 49);
+    border-radius: 0.3rem;
+}
+
+.confirmButton:active {
+    background-color: rgb(221, 205, 46);
+}
+
+#chatContainer {
     background-color: rgb(226, 226, 226);
     width: 100%;
     height: 100%;
@@ -121,6 +172,11 @@ h1, h2, h3, h4, h5, h6 {
     grid-row: 3 / span 1;
 }
 
+#chatInput .confirmButton {
+    width: 6rem;
+    margin: 0.7rem 0.7rem 0.7rem 0;
+}
+
 #chatInputText {
     font-size: 1rem;
     word-break: break-all;
@@ -130,20 +186,6 @@ h1, h2, h3, h4, h5, h6 {
     padding: 0;
     margin: 0.7rem 1rem;
     flex-grow: 1;
-}
-
-#chatSendButton {
-    color: black;
-    font-size: 1rem;
-    background-color: rgb(249, 230, 52);
-    width: 6rem;
-    margin: 0.7rem 0.7rem 0.7rem 0;
-    border: 1px solid rgb(234, 216, 49);
-    border-radius: 0.3rem;
-}
-
-#chatSendButton:active {
-    background-color: rgb(221, 205, 46);
 }
 
 #sidebar {
@@ -185,4 +227,8 @@ h1, h2, h3, h4, h5, h6 {
 .participantNameSelf {
     font-size: 0.9rem;
     font-weight: 600;
+}
+
+#nicknameDialog {
+    visibility: hidden;
 }
